<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/th"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Application_Name"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:background="@drawable/gradient_button_red"
        android:text="@string/Emergency_Contact"
        android:textSize="24sp"
        android:layout_marginTop="48dp"/>

    <Button
        android:id="@+id/addDisasterBtn"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:background="@drawable/gradient_button_blue"
        android:text="@string/Disaster_Button"
        android:textSize="24sp"
        android:layout_marginTop="24dp"/>
</LinearLayout>
